Solución de: Financiamiento, error al guardar intereses. Proyección de ventas, error al calcular ingresos generados. Revisión de flujo de caja. Agregado StartWindow con logo de Negotium. Soporte a selección de moneda por proyecto.

--- a/UCR.Negotium/Dialogs/RegistrarCosto.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarCosto.xaml
@@ -70,7 +70,7 @@
                         </Style>
                     </DataGridTextColumn.EditingElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Path=CostoUnitario}" Header="Precio (₡)" Width="3*">
+                <DataGridTextColumn Binding="{Binding Path=CostoUnitario}" Width="3*" x:Name="dgtxcPrecio">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
