--- a/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
@@ -80,11 +80,11 @@
                           SelectedValue="{Binding Reinversion.UnidadMedida.CodUnidad}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <Controls:NumericUpDown Minimum="1" TextAlignment="Left" 
-                                        Value="{Binding Reinversion.Cantidad}" Margin="0,0,140,0"/>
+                <Controls:NumericUpDown Minimum="1" TextAlignment="Left" HasDecimals="True" StringFormat="0.0"
+                                        Value="{Binding Reinversion.Cantidad}" Margin="0,0,80,0"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Reinversion.CostoUnitario}" Margin="0,0,140,0" Name="tbCostoUnitario" 
+                <TextBox Text="{Binding Reinversion.CostoUnitario}" Margin="0,0,80,0" Name="tbCostoUnitario" 
                          TextChanged="tbCostoUnitario_TextChanged"/>
             </Grid>
             <StackPanel Style="{StaticResource horizontalPanelFormStyle}" Margin="0,10,0,10">
@@ -94,7 +94,7 @@
                           IsChecked="{Binding Reinversion.Depreciable, Converter={conv:InverseBoolConverter}}"/>
             </StackPanel>
             <Grid Style="{StaticResource gridFormStyle}">
-                <Controls:NumericUpDown Minimum="2" TextAlignment="Left" Margin="0,0,140,0"
+                <Controls:NumericUpDown Minimum="2" TextAlignment="Left" Margin="0,0,80,0"
                                         Value="{Binding Reinversion.VidaUtil}" Name="nudVidaUtil"
                                         IsEnabled="{Binding Reinversion.Depreciable}"/>
             </Grid>
