--- a/UCR.Negotium/UserControls/ctrl_Financiamiento.xaml
+++ b/UCR.Negotium/UserControls/ctrl_Financiamiento.xaml
@@ -33,25 +33,28 @@
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="30,20">
                     <Label Content="Monto a Financiar:"/>
                     <TextBox Name="tbMonto" TextChanged="tbMonto_TextChanged" 
-                             Text="{Binding FinanciamientoSelected.MontoFinanciamiento}" Margin="0,0,27,0"
+                             Text="{Binding FinanciamientoSelected.MontoFinanciamiento, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Margin="0,0,27,0"
                              ToolTip="Ingrese en este campo el monto a financiar del Proyecto"/>
                 </StackPanel>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="1" Margin="10,20">
                     <Label Content="Finalización del Financiamiento:"/>
                     <ComboBox Margin="0,0,75,0" Width="180" ItemsSource="{Binding FinalizacionDisponible}"
-                              SelectedValue="{Binding FinanciamientoSelected.TiempoFinanciamiento}" 
+                              SelectedValue="{Binding FinanciamientoSelected.AnoFinalPago}" 
                               Name="cbxFinalizacionFinanciamiento" SelectionChanged="cbxFinalizacionFinanciamiento_SelectionChanged"/>
                 </StackPanel>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="2" Margin="10,20">
                     <Label Content="Año Inicial del Pago:"/>
                     <ComboBox Margin="0,0,75,0" Width="180" ItemsSource="{Binding AnosDisponibles, UpdateSourceTrigger=PropertyChanged}"
-                              SelectedValue="{Binding FinanciamientoSelected.AnoInicialPago}" />
+                              SelectedValue="{Binding FinanciamientoSelected.AnoInicialPago}" 
+                              SelectionChanged="cbxAnosDisponibles_SelectionChanged"
+                              x:Name="cbxAnosDisponibles"/>
                 </StackPanel>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="10,20" Grid.Column="3">
                     <Label Content="Monto con interés fijo:"/>
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                        <CheckBox FlowDirection="LeftToRight" Content="Si"
-                                  IsChecked="{Binding FinanciamientoSelected.InteresFijo}"/>
+                        <CheckBox FlowDirection="LeftToRight" Content="Si" x:Name="cbInteresFijo"
+                                  IsChecked="{Binding FinanciamientoSelected.InteresFijo}"
+                                  Checked="cbInteresFijo_Checked" Unchecked="cbInteresFijo_Unchecked"/>
                         <CheckBox FlowDirection="LeftToRight" Content="No" Margin="10,0,0,0"
                                   IsChecked="{Binding FinanciamientoSelected.InteresFijo, Converter={conv:InverseBoolConverter}}"/>
                     </StackPanel>
