--- a/UCR.Negotium/UserControls/ctrl_Reinversiones.xaml
+++ b/UCR.Negotium/UserControls/ctrl_Reinversiones.xaml
@@ -31,10 +31,10 @@
                         <DataGridTextColumn Binding="{Binding Path=AnoReinversion}" Header="Año de Reinversión" Width="2.5*"/>
                         <DataGridTextColumn Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="1.5*"/>
                         <DataGridTextColumn Binding="{Binding Path=UnidadMedida}" Header="Unidad Medida" Width="2*"/>
-                        <DataGridTextColumn Binding="{Binding Path=CostoUnitarioFormat}" Header="Costo Unitario (₡)" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=CostoUnitarioFormat}" x:Name="dgtxcCostoUnidad" Width="2.5*"/>
                         <DataGridCheckBoxColumn Binding="{Binding Path=Depreciable}" Header="Depreciable" Width="1.8*"/>
                         <DataGridTextColumn Binding="{Binding Path=VidaUtil}" Header="Vida Útil(Años)" Width="2*"/>
-                        <DataGridTextColumn Binding="{Binding Path=SubtotalFormat}" Header="Subtotal (₡)" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=SubtotalFormat}" x:Name="dgtxcSubtotal" Width="2*"/>
                     </DataGrid.Columns>
                 </DataGrid>
                 <Grid Grid.Row="1">
