--- a/UCR.Negotium/Dialogs/ReferenciasNegotium.xaml
+++ b/UCR.Negotium/Dialogs/ReferenciasNegotium.xaml
@@ -1,12 +1,45 @@
-﻿<Window x:Class="UCR.Negotium.Dialogs.ReferenciasNegotium"
+﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.ReferenciasNegotium"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
-        mc:Ignorable="d"
-        Title="ReferenciasNegotium" Height="300" Width="300">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        mc:Ignorable="d" Style="{StaticResource dialogsStyle}"
+        WindowStartupLocation="CenterScreen" Title="Referencias | Negotium v1.0" 
+        Height="470" Width="750">
     <Grid>
-        
-    </Grid>
-</Window>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="110"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="Referencias" FontSize="16" Margin="0,30,0,0" HorizontalAlignment="Center" FontWeight="DemiBold"/>
+            <RichTextBox FontSize="14" BorderThickness="0" 
+                     IsReadOnly="True" Margin="20,10" x:Name="descripcionReferencias">
+            </RichTextBox>
+        </StackPanel>
+        <Border Grid.Row="1" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" 
+                Margin="20,10,20,20">
+            <ItemsControl x:Name="referenciasList" Margin="10" VerticalAlignment="Center">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <BulletDecorator Width="Auto">
+                            <BulletDecorator.Bullet>
+                                <iconPacks:PackIconModern Width="16" Height="16" Kind="BookHardcoverOpenWriting" Foreground="Teal"/>
+                            </BulletDecorator.Bullet>
+                            <RichTextBox FontSize="14" Margin="5,2" IsReadOnly="True" BorderThickness="0">
+                                <FlowDocument>
+                                    <Paragraph>
+                                        <Run Text="{Binding Path=., Mode=TwoWay}"/>
+                                    </Paragraph>
+                                </FlowDocument>
+                            </RichTextBox>
+                        </BulletDecorator>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Border>
+        </Grid>
+</Controls:MetroWindow>
