--- a/UCR.Negotium/Dialogs/RegistrarInversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarInversion.xaml
@@ -60,11 +60,11 @@
                           SelectedValue="{Binding Inversion.UnidadMedida.CodUnidad}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <Controls:NumericUpDown Minimum="1" TextAlignment="Left" HasDecimals="True" StringFormat="0.0"
+                <Controls:NumericUpDown Minimum="1" TextAlignment="Left" HasDecimals="True" StringFormat="0.00"
                     Value="{Binding Inversion.Cantidad}" Margin="0,0,40,0"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Inversion.CostoUnitario}" Margin="0,0,40,0" Name="tbCostoUnitario" 
+                <TextBox Text="{Binding Path=Inversion.CostoUnitario, Mode=TwoWay, StringFormat={}{0:N}}" Margin="0,0,40,0" Name="tbCostoUnitario" 
                          TextChanged="tbCostoUnitario_TextChanged"/>
             </Grid>
             <StackPanel Style="{StaticResource horizontalPanelFormStyle}" Margin="0,10,0,10">
