--- a/UCR.Negotium/UserControls/ctrl_Financiamiento.xaml
+++ b/UCR.Negotium/UserControls/ctrl_Financiamiento.xaml
@@ -32,9 +32,9 @@
                 </Grid.RowDefinitions>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="30,20">
                     <Label Content="Monto a Financiar:"/>
-                    <TextBox Name="tbMonto" TextChanged="tbMonto_TextChanged" 
-                             Text="{Binding FinanciamientoSelected.MontoFinanciamiento, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Margin="0,0,27,0"
-                             ToolTip="Ingrese en este campo el monto a financiar del Proyecto"/>
+                    <TextBox Name="tbMonto" TextChanged="tbMonto_TextChanged"
+                             Text="{Binding Path=FinanciamientoSelected.MontoFinanciamiento, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, StringFormat={}{0:N}}" 
+                             Margin="0,0,27,0" ToolTip="Ingrese en este campo el monto a financiar del Proyecto"/>
                 </StackPanel>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="1" Margin="10,20">
                     <Label Content="Finalización del Financiamiento:"/>
