--- a/UCR.Negotium/Dialogs/RegistrarCosto.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarCosto.xaml
@@ -62,17 +62,21 @@
             </DataGrid.Style>
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Mes}" Header="Mes" Width="4*"/>
-                <DataGridTextColumn Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="3*">
+                <DataGridTextColumn Binding="{Binding Path=Cantidad, Mode=TwoWay, StringFormat={}{0:N}}" Header="Cantidad" Width="3*">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
+                            <EventSetter Event="GotFocus" Handler="tbNumerosPositivos_GotFocus"/>
+                            <EventSetter Event="LostFocus" Handler="tbNumerosPositivos_LostFocus"/>
                         </Style>
                     </DataGridTextColumn.EditingElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Path=CostoUnitario}" Width="3*" x:Name="dgtxcPrecio">
+                <DataGridTextColumn Binding="{Binding Path=CostoUnitario, Mode=TwoWay, StringFormat={}{0:N}}" Width="3*" x:Name="dgtxcPrecio">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
+                            <EventSetter Event="GotFocus" Handler="tbNumerosPositivos_GotFocus"/>
+                            <EventSetter Event="LostFocus" Handler="tbNumerosPositivos_LostFocus"/>
                         </Style>
                     </DataGridTextColumn.EditingElementStyle>
                 </DataGridTextColumn>
