--- a/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
@@ -79,12 +79,12 @@
                           SelectedValue="{Binding Reinversion.UnidadMedida.CodUnidad}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <Controls:NumericUpDown Minimum="1" TextAlignment="Left" HasDecimals="True" StringFormat="0.0"
-                                        Value="{Binding Reinversion.Cantidad}" Margin="0,0,80,0"/>
+                <TextBox Text="{Binding Path=Reinversion.Cantidad, Mode=TwoWay, StringFormat={}{0:N}}" Margin="0,0,80,0" Name="tbCantidad" 
+                         TextChanged="tbCantidad_TextChanged" GotFocus="tbCantidad_GotFocus" LostFocus="tbCantidad_LostFocus"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Reinversion.CostoUnitario}" Margin="0,0,80,0" Name="tbCostoUnitario" 
-                         TextChanged="tbCostoUnitario_TextChanged"/>
+                <TextBox Text="{Binding Path=Reinversion.CostoUnitario, Mode=TwoWay, StringFormat={}{0:N}}" Margin="0,0,80,0" Name="tbCostoUnitario" 
+                         TextChanged="tbCostoUnitario_TextChanged" GotFocus="tbCostoUnitario_GotFocus" LostFocus="tbCostoUnitario_LostFocus"/>
             </Grid>
             <StackPanel Style="{StaticResource horizontalPanelFormStyle}" Margin="0,10,0,10">
                 <CheckBox FlowDirection="LeftToRight" Content="Si"
